# BuildBudget

./: .replit  app.py  bim_processor.py  construction_budget.db  database.py  init_database.py  ml_predictor.py  mmd  nbr_standards.py  pyproject.toml  sample_building.ifc  utils.py
attached_assets/: Pasted--Errno-13-Permission-denied-is-the-operating-system-way-of-saying-I-can-t-open-or-create-that-f-1749141054442_1749141054444.txt  Pasted--Errno-13-Permission-denied-is-the-operating-system-way-of-saying-I-can-t-open-or-create-that-file-1749140959917_1749140959919.txt  orçamento_arq2.md
data/: seed_data.py
